{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 81,
  "lineage": "83c1d792-16da-3b12-4dad-b61176b2a629",
  "resources": [
    {
      "module": "module.ec2_instance_creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:016963197464:instance/i-041cb6278333bda6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041cb6278333bda6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04bbde8ce867050c0",
            "private_dns": "i-041cb6278333bda6c.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "resource-name"
              }
            ],
            "private_ip": "10.2.10.153",
            "public_ip": "3.93.34.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3ed1b56ea9a5382",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c08ff6d80b48757e",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00efa8c87971e8e27"
            ]
          },
          "dependencies": [
            "module.ec2_instance_creation.aws_security_group.allow_traffic",
            "module.ec2_instance_creation.data.aws_ami.amazon_linux_2023",
            "module.public_subnet_creation.aws_subnet.public01",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_host_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:016963197464:instance/i-0ab36cde62be80ced",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab36cde62be80ced",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002ca120ecd51a46a",
            "private_dns": "i-0ab36cde62be80ced.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "resource-name"
              }
            ],
            "private_ip": "10.2.136.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fdc623a21d88172c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b78eb00f7c0c6491",
            "tags": {
              "Name": "private_01 Host"
            },
            "tags_all": {
              "Name": "private_01 Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00efa8c87971e8e27"
            ]
          },
          "dependencies": [
            "module.ec2_instance_creation.aws_security_group.allow_traffic",
            "module.ec2_instance_creation.data.aws_ami.amazon_linux_2023",
            "module.private_subnet_creation.aws_subnet.private01",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:security-group/sg-00efa8c87971e8e27",
            "description": "all allow_traffic inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00efa8c87971e8e27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_traffic all",
            "name_prefix": "",
            "owner_id": "016963197464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic all"
            },
            "tags_all": {
              "Name": "allow_traffic all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_creation",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:security-group-rule/sgr-06b44b921e284c54b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06b44b921e284c54b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00efa8c87971e8e27",
            "security_group_rule_id": "sgr-06b44b921e284c54b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance_creation.aws_security_group.allow_traffic",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_creation",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:security-group-rule/sgr-06056232e53bb0670",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06056232e53bb0670",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00efa8c87971e8e27",
            "security_group_rule_id": "sgr-06056232e53bb0670",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance_creation.aws_security_group.allow_traffic",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e84a48a0dc11ea8d",
            "arn": "arn:aws:ec2:us-east-1:016963197464:elastic-ip/eipalloc-0e84a48a0dc11ea8d",
            "association_id": "eipassoc-0cea71e1163fdeea6",
            "domain": "vpc",
            "id": "eipalloc-0e84a48a0dc11ea8d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e2861706dbc586f5",
            "private_dns": "ip-10-2-8-119.ec2.internal",
            "private_ip": "10.2.8.119",
            "public_dns": "ec2-3-234-129-237.compute-1.amazonaws.com",
            "public_ip": "3.234.129.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_new"
            },
            "tags_all": {
              "Name": "eip_new"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014944ba3445bd333",
            "arn": "arn:aws:ec2:us-east-1:016963197464:elastic-ip/eipalloc-014944ba3445bd333",
            "association_id": "eipassoc-0c19ea696c8434521",
            "domain": "vpc",
            "id": "eipalloc-014944ba3445bd333",
            "network_border_group": "us-east-1",
            "network_interface": "eni-020d1ae01590c3aea",
            "private_dns": "ip-10-2-23-77.ec2.internal",
            "private_ip": "10.2.23.77",
            "public_dns": "ec2-52-70-190-75.compute-1.amazonaws.com",
            "public_ip": "52.70.190.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_new"
            },
            "tags_all": {
              "Name": "eip_new"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_new_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e84a48a0dc11ea8d",
            "association_id": "eipassoc-0cea71e1163fdeea6",
            "connectivity_type": "public",
            "id": "nat-03a1f8b41a3eed718",
            "network_interface_id": "eni-0e2861706dbc586f5",
            "private_ip": "10.2.8.119",
            "public_ip": "3.234.129.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c08ff6d80b48757e",
            "tags": {
              "Name": "nat_new_01"
            },
            "tags_all": {
              "Name": "nat_new_01"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_01",
            "module.public_subnet_creation.aws_subnet.public01",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_new_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014944ba3445bd333",
            "association_id": "eipassoc-0c19ea696c8434521",
            "connectivity_type": "public",
            "id": "nat-0e2bf04d139cc49d0",
            "network_interface_id": "eni-020d1ae01590c3aea",
            "private_ip": "10.2.23.77",
            "public_ip": "52.70.190.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa0b1f2fd46063e1",
            "tags": {
              "Name": "nat_new_02"
            },
            "tags_all": {
              "Name": "nat_new_02"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_02",
            "module.public_subnet_creation.aws_subnet.public02",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_01_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:route-table/rtb-0c85c60d6a7515c8c",
            "id": "rtb-0c85c60d6a7515c8c",
            "owner_id": "016963197464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03a1f8b41a3eed718",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_subnet_01_route_table"
            },
            "tags_all": {
              "Name": "private_subnet_01_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_01",
            "module.nat_gateway.aws_nat_gateway.nat_new_01",
            "module.public_subnet_creation.aws_subnet.public01",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_02_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:route-table/rtb-0c1f9ec6b1fc57f4a",
            "id": "rtb-0c1f9ec6b1fc57f4a",
            "owner_id": "016963197464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e2bf04d139cc49d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_subnet_02_route_table"
            },
            "tags_all": {
              "Name": "private_subnet_02_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_02",
            "module.nat_gateway.aws_nat_gateway.nat_new_02",
            "module.public_subnet_creation.aws_subnet.public02",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_01_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e35a794be25897bd",
            "route_table_id": "rtb-0c85c60d6a7515c8c",
            "subnet_id": "subnet-0b78eb00f7c0c6491"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_01",
            "module.nat_gateway.aws_nat_gateway.nat_new_01",
            "module.private_rtb_creation.aws_route_table.private_subnet_01_rtb",
            "module.private_subnet_creation.aws_subnet.private01",
            "module.public_subnet_creation.aws_subnet.public01",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_02_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cd191c12c79abc2",
            "route_table_id": "rtb-0c1f9ec6b1fc57f4a",
            "subnet_id": "subnet-03ab6b384c0cd6999"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.elastic_ip_02",
            "module.nat_gateway.aws_nat_gateway.nat_new_02",
            "module.private_rtb_creation.aws_route_table.private_subnet_02_rtb",
            "module.private_subnet_creation.aws_subnet.private02",
            "module.public_subnet_creation.aws_subnet.public02",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:subnet/subnet-0b78eb00f7c0c6491",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b78eb00f7c0c6491",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "016963197464",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "private_subnet_01"
            },
            "tags_all": {
              "Name": "private_subnet_01"
            },
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "dependencies": [
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:subnet/subnet-03ab6b384c0cd6999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab6b384c0cd6999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016963197464",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "private_subnet_02"
            },
            "tags_all": {
              "Name": "private_subnet_02"
            },
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "dependencies": [
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_01_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:route-table/rtb-0e013b3661855b624",
            "id": "rtb-0e013b3661855b624",
            "owner_id": "016963197464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090a395d2320058d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnet_01_route_table"
            },
            "tags_all": {
              "Name": "public_subnet_01_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_creation.aws_internet_gateway.aws_internet_gateway",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_02_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:route-table/rtb-06615ee93a16a70a2",
            "id": "rtb-06615ee93a16a70a2",
            "owner_id": "016963197464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090a395d2320058d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnet_02_route_table"
            },
            "tags_all": {
              "Name": "public_subnet_02_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_creation.aws_internet_gateway.aws_internet_gateway",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_01_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04621651138300f78",
            "route_table_id": "rtb-0e013b3661855b624",
            "subnet_id": "subnet-0c08ff6d80b48757e"
          },
          "dependencies": [
            "module.public_rtb_creation.aws_route_table.public_subnet_01_rtb",
            "module.public_subnet_creation.aws_subnet.public01",
            "module.vpc_creation.aws_internet_gateway.aws_internet_gateway",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_rtb_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_02_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6d286f6cfd8c289",
            "route_table_id": "rtb-06615ee93a16a70a2",
            "subnet_id": "subnet-0fa0b1f2fd46063e1"
          },
          "dependencies": [
            "module.public_rtb_creation.aws_route_table.public_subnet_02_rtb",
            "module.public_subnet_creation.aws_subnet.public02",
            "module.vpc_creation.aws_internet_gateway.aws_internet_gateway",
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:subnet/subnet-0c08ff6d80b48757e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c08ff6d80b48757e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016963197464",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "public_subnet_01",
              "Use": "internet expose subnet 01"
            },
            "tags_all": {
              "Name": "public_subnet_01",
              "Use": "internet expose subnet 01"
            },
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "dependencies": [
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:subnet/subnet-0fa0b1f2fd46063e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa0b1f2fd46063e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016963197464",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "Public_Subnet_02",
              "Use": "Internet Expose subnet 02"
            },
            "tags_all": {
              "Name": "Public_Subnet_02",
              "Use": "Internet Expose subnet 02"
            },
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          },
          "dependencies": [
            "module.vpc_creation.aws_vpc.vpc_new"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_creation",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "my_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:016963197464:transit-gateway/tgw-0319bd9f302d932ef",
            "association_default_route_table_id": "tgw-rtb-040dc550cbaeca777",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "example",
            "dns_support": "enable",
            "id": "tgw-0319bd9f302d932ef",
            "multicast_support": "disable",
            "owner_id": "016963197464",
            "propagation_default_route_table_id": "tgw-rtb-040dc550cbaeca777",
            "security_group_referencing_support": "disable",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway_creation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:vpc/vpc-0e3c10fca42d49f72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-009acb1f868d6b464",
            "default_route_table_id": "rtb-019f1a34d02baf749",
            "default_security_group_id": "sg-0537dfb189796b960",
            "dhcp_options_id": "dopt-062f0cb3c59b6627b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3c10fca42d49f72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019f1a34d02baf749",
            "owner_id": "016963197464",
            "tags": {
              "Name": "Destination peer"
            },
            "tags_all": {
              "Name": "Destination peer"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_creation",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:internet-gateway/igw-090a395d2320058d8",
            "id": "igw-090a395d2320058d8",
            "owner_id": "016963197464",
            "tags": {
              "Name": "igw_new"
            },
            "tags_all": {
              "Name": "igw_new"
            },
            "vpc_id": "vpc-0c5f90c3607cc2fdb"
          }
        }
      ]
    },
    {
      "module": "module.vpc_creation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016963197464:vpc/vpc-0c5f90c3607cc2fdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0fac00a87a3cb7959",
            "default_route_table_id": "rtb-05c44951c710cbe01",
            "default_security_group_id": "sg-04435fe4d838072b3",
            "dhcp_options_id": "dopt-062f0cb3c59b6627b",
            "enable_dns_hostnames": true,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-0c5f90c3607cc2fdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c44951c710cbe01",
            "owner_id": "016963197464",
            "tags": {
              "Environment": "PROD",
              "Name": "PROD_VPC"
            },
            "tags_all": {
              "Environment": "PROD",
              "Name": "PROD_VPC"
            }
          }
        }
      ]
    }
  ]
}